pgcenter (devel) unstable; urgency=low

  * reduce size of memory allocations for data arrays.
  * fix bufsize in set_filter().

 -- Alexey Lesovsky <lesovsky@gmail.com>  Sat, 01 Oct 2016 13:23:00 +0500

pgcenter (0.3.0) unstable; urgency=low

  * print static program name in title instead of argv[0].
  * exclude (auto)vacuum tasks accounting in xact_maxtime field.
  * fix runglish, typos and cosmetic changes.
  * change long queries min age from 500ms to 0ms.
  * replace min() and max() functions with macros.
  * add filtration feature.
  * allow to use connection settings from libpq env vars.
  * add install-man section into Makefile.
  * fix torn multiline records in log tail.
  * use qsort_r() instead of hand-made sorting.
    - many improvements in arrays functions (diff, sort);
    - queries use it's own order now (user can't change 'ORDER BY' in query);
    - sorting available for all columns now.
  * remove unnecessary WHERE from pg_stat_statements queries.
  * fix segfault, when diskstats/net are failed to read at startup.
  * add mreport() - general function for log/error message reporting.
  * totally replace strncpy with snprintf.
  * fix check first symbol in listen_addresses.
  * add pg_stat_progress_vacuum (since 9.6).
  * add compatibility with pg-9.6 (pg_stat_activity).
  * use set_escdelay() instead of direct changing ESCDELAY.
  * fix signal_group_backend(), doesn't work if mask has more than one flag.
  * improve const correctness.
  * autovac info: print number of user vacuum and autovac max worker limit.
  * check_pg_listen_addr() refactoring.
  * pg_stat_replication now works on standbys too.
  * pg_stat_statements: use menu and switching, remove c, v, V hotkeys.
  * show details and hint if query has failed.
  * rewrite replication context, show detailed lag info.
  * pg_stat_statements: add local IO information context (V - hotkey).
  * nicstat: return from function if sock() failed (instead of program exit).